# boiler-plates-and-examples

./: .gitignore  LICENSE  README.md  dev-requirements.txt  roadmap.md
.github/: dependabot.yml
.github/workflows/: flask.yaml  python-backend.yaml
api-django/: README.md
api-django/api/: requirements.txt
api-django/api/main/: urls.py  wsgi.py
api-fastapi/api/: main.py  pyproject.toml
api-fastapi/docker/base/: Dockerfile  build_docker.sh
api-fastapi/docker/dev/: docker-compose.yaml  run.sh  stop.sh
api-fastapi/nginx/: nginx-dev.conf
api-flask/: .env.dev  .env.prod  .env.test  README.md  app.py  config.py
api-flask/api/: .env.local  .env.local.test  app.py  config.py  manage.py  models.py  requirements.txt  setup.cfg  test_local.sh  wsgi.py
api-flask/api/tests/: conftest.py
api-flask/api/v1/: __init__.py  api.py
api-flask/docker/base/: Dockerfile  build_docker.sh
api-flask/docker/dev/: .env  docker-compose.yaml  docker-compose.yml  run.sh  stop.sh
api-flask/docker/test/: run.sh
api-flask/nginx/: nginx-dev.conf
api-flask/v1/: api.py
api-flask/v1/views/: __init__.py  user.py
api-sanic/: app.py  requirements.txt
django-react/api/: manage.py
django-react/api/main/: asgi.py  settings.py
web-react-REST/: .env.dev  README.md  package.json
web-react-REST/docker/base/: Dockerfile  build_docker.sh
web-react-REST/docker/dev/: docker-compose.yaml  run.sh  stop.sh
web-react-REST/src/: App.tsx
web-react-REST/src/components/: NavBar.style.ts  NavBar.tsx
web-react-REST/web/: .eslintrc.js  .prettierrc  package.json  tsconfig.json
(+29 files in other folders)
